--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-.env
-.env.local
+
 node_modules
 dist-ssr
 *.local
 
+.env
+.env.*
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
